--- a/Default.html
+++ b/Default.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge;IE=11" />
     <meta http-equiv="Cache-Control" content="no-store" />
     <script src="wisej.wx"></script>
+    <link rel="stylesheet" type="text/css" href="button-styles.css" />
 </head>
 <body>
 
