added new home page. will plan to add new features for construction
will convert it to EMIS (Environment Management Information System)

--- a/Default.html
+++ b/Default.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>Inspection Report Management System (IRMS)</title>
+    <title>Environment Management Information System (EMIS)</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge;IE=11" />
     <meta http-equiv="Cache-Control" content="no-store" />
